# phd-project-1

./: .gitmodules  .pre-commit-config.yaml  Makefile  pyproject.toml
data/: gptModelTokenLengths.csv
phd_project_1/: chatGPTInterface_2.py  pdf.py  pdf2txt.py  script.py  temp  utils.py
phd_project_1/journalSearch/: nature.py  searchNature.bash
scripts/: pdfs2text.bash
