[tool.poetry]
name = "phd-project-1"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
tiktoken = "^0.6.0"
pypdf = {version = "^4.0.1", extras = ["crypto"]}
click = "^8.1.7"
progress = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
